@@ -3826,4 +3826,5 @@ Changelog for GXemul:
 20090611	Documentation updates (NetBSD 5 etc).
 20090621	Adding a hack for the pcc2 PSCALEADJ register, making it
 		possible to install and run OpenBSD/mvme88k 4.5.
-		NetBSD/evbmips and /cobalt 5.0 can now run.
+		NetBSD/evbmips, /sgimips, and /cobalt 5.0 have been verified
+		to work.
